# SourceModExt

./: .gitignore  .gitmodules  CMakeLists.txt  flake.nix
src/: extension.cpp  smsdk_config.h
src/include/: extension.h
